--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
                 columns:
                     - column:
                         name: ID
-                        type: varchar(10)
+                        type: bigint
                         constraints:
                             primaryKey: true
                             nullable: false
